2008-12-11  Alberto Garcia  <agarcia@igalia.com>

	* doc/hildon-sections.txt: Fixed warning about unused symbols.

2008-12-11  Alberto Garcia  <agarcia@igalia.com>

	* doc/hildon-sections.txt: Added sections file.

2008-12-11  Claudio Saavedra  <csaavedra@igalia.com>

	* AUTHORS: Updates.
	* src/*.[ch]: Updates.

2008-12-10  Thomas Thurman  <thomas.thurman@collabora.co.uk>

        * examples/hildon-progress-indicator-example.c: new file
        * examples/Makefile.am: include the new example program

2008-12-10  Alberto Garcia  <agarcia@igalia.com>

	* src/hildon-wizard-dialog.c (destroy): Fix compilation warning

2008-12-09  Claudio Saavedra  <csaavedra@igalia.com>

	* configure.ac: post release version bump
	* debian/changelog: version bump

2008-12-09  Claudio Saavedra  <csaavedra@igalia.com>

	[Release 2.1.28]

	* NEWS: updates
	* configure.ac: bump version
	* debian/changelog: updates
	* debian/control: bump gtk+ dependency

2008-12-09  Claudio Saavedra  <csaavedra@igalia.com>

	* src/hildon-dialog.c: Mark as deprecated.
	* src/hildon-dialog.h: Mark as deprecated.
	* src/hildon-picker-dialog.h: Allow HildonPickerDialog to derive
	from HildonDialog and still work, even if
	HILDON_DISABLE_DEPRECATED is defined. This is required as we can't currently
	break the ABI and simply make HildonPickerDialog derive from GtkDialog.

	Fixes: NB#90867 (Deprecate HildonDialog and use GtkDialog (with
	maemo changes) instead)

2008-12-09  Alejandro G. Castro	 <alex@igalia.com>

	* src/hildon-pannable_area.h:
	* src/hildon-pannable_area.c:
	(hildon_pannable_area_class_init),
	(hildon_pannable_area_set_property),
	(hildon_pannable_area_get_property),
	(hildon_pannable_area_size_request),
	(hildon_pannable_area_get_size_request_policy),
	(hildon_pannable_area_set_size_request_policy): Added new API
	allowing applications to control the request policy. Now they can
	choose to use the minimum (HILDON_MOVEMENT_MINIMUM) size or the
	children allocation (HILDON_MOVEMENT_CHILDREN).
