@@ -159,7 +159,7 @@ GtkWidget* hildon_pannable_get_child_widget_at  (HildonPannableArea *area,
                                                  gdouble x, gdouble y);
 HildonSizeRequestPolicy hildon_pannable_area_get_size_request_policy (HildonPannableArea *area);
 void hildon_pannable_area_set_size_request_policy (HildonPannableArea *area,
-                                                   HildonSizeRequestPolicy size_from_child);
+                                                   HildonSizeRequestPolicy size_request_policy);
 
 G_END_DECLS
 
